about popular cars project is done

--- a/index.html
+++ b/index.html
@@ -4,17 +4,112 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <!-- <link rel="stylesheet" href="./css/style.min.css"> -->
   </head>
   <body>
     <!-- HEADER START -->
-    <header class="header"></header>
+    <header class="header">
+      <h1 class="header__title">CARS</h1>
+      <p class="header__subtitle">
+        you will get complete information about <br />the world's most famous
+        cars on this site
+      </p>
+      <div class="home__scroll-box">
+        <i class="fa-solid fa-chevron-down"></i>
+      </div>
+    </header>
+
     <!-- HEADER END -->
 
     <!-- MAIN START -->
-    <main class="main"></main>
+    <main class="main">
+      <section class="Rolls-Royce">
+        <video
+          src="./images/IMG_0253.MP4"
+          muted
+          autoplay
+          loop
+          class="rolc-roys__video"
+        ></video>
+        <h1 class="Rolls-Royce">Rolls Royce</h1>
+        <p class="Rolls-Royce__subtitle">
+          The legendary maker of some of the best luxury cars you can buy has
+          had a reputation of exemplary engineering since its introduction in
+          1906. While the vehicles are still built in England, Rolls-Royce is
+          actually owned today by BMW.
+        </p>
+        <div class="btns">
+          <a href="https://www.rolls-roycemotorcars.com/en_GB/home.html"
+            ><button class="Rolls-Royce__btn-1 btn">More</button></a
+          >
+          <a
+            href="https://www.rolls-roycemotorcars.com/en_GB/home.html"
+            target="_blank"
+            ><button class="Rolls-Royce__btn btn">Company</button></a
+          >
+        </div>
+      </section>
+
+      <section class="Rolls-Royce">
+        <video
+          src="./images/IMG_0254.MP4"
+          muted
+          autoplay
+          loop
+          class="rolc-roys__video"
+        ></video>
+        <h1 class="Rolls-Royce">B M W</h1>
+        <p class="Rolls-Royce__subtitle">
+          The BMW Group is the world's leading provider of premium cars and
+          motorcycles and the home of the BMW, MINI, Rolls-Royce and BMW
+          Motorrad brands. Our vehicles and products are tailored to the needs
+          of our customers and constantly enhanced – with a clear focus on
+          sustainability and the conservation of resources.
+        </p>
+        <div class="btns">
+          <a href="https://www.bmwusa.com/all-bmws.html" target="_blank"
+            ><button class="Rolls-Royce__btn-1 btn">More</button></a
+          >
+          <a href="https://www.bmwusa.com/all-bmws.html" target="_blank"
+            ><button class="Rolls-Royce__btn btn">Company</button></a
+          >
+        </div>
+      </section>
+
+      <section class="Rolls-Royce">
+        <video
+          src="./images/IMG_0255.MP4"
+          muted
+          autoplay
+          loop
+          class="rolc-roys__video"
+        ></video>
+        <h1 class="Rolls-Royce">Mercedes Bens</h1>
+        <p class="Rolls-Royce__subtitle">
+          Mercedes-Benz is a German luxury car company that produces vehicles
+          known for their opulence and state-of-the-art technology. Many are
+          available as sedans and cabriolets (convertibles), and some Mercedes
+          luxury SUVs, such as the GLC and GLE, are available as coupes.
+        </p>
+        <div class="btns">
+          <a href="https://group.mercedes-benz.com/company/" target="_blank"
+            ><button class="Rolls-Royce__btn-1 btn">More</button></a
+          >
+          <a href="https://group.mercedes-benz.com/company/" target="_blank"
+            ><button class="Rolls-Royce__btn btn">Company</button></a
+          >
+        </div>
+      </section>
+    </main>
     <!-- MAIN END -->
 
     <!-- FOOTER START -->
